# Synthese-Image-Avance

TD1_DeferredShading/: CMakeLists.txt
TD1_DeferredShading/data/shaders/: deferred.frag  deferred.vert  gbuffer.frag  gbuffer.vert
TD1_DeferredShading/src/: fbo.cpp  fbo.h  main.cpp  mesh.cpp  mesh.h  opengl.h  quad.cpp  quad.h  readme.md  viewer.cpp  viewer.h
TD4_MonteCarlo/: README.md
TD4_MonteCarlo/sia_td4/: CMakeLists.txt
TD4_MonteCarlo/sia_td4/data/: deuxSpheres.scn  tw_area.scn
TD4_MonteCarlo/sia_td4/ext/: CMakeLists.txt
TD4_MonteCarlo/sia_td4/src/: areaLight.cpp  phong.cpp  viewer.cpp  warp.cpp  whitted.cpp
TD5_Ward_BRDF/: README.md
TD5_Ward_BRDF/sia_td5/: CMakeLists.txt
TD5_Ward_BRDF/sia_td5/data/: sphereWard.scn  sphereWardEnvMap.scn
TD5_Ward_BRDF/sia_td5/include/: material.h
TD5_Ward_BRDF/sia_td5/src/: directMats.cpp  viewer.cpp  ward.cpp  warp.cpp
